# software-project

./: .coveragerc  .gitignore  README.md  pyproject.toml  pytest.ini  tasks.py
documentation/: architecture.md  changelog.md  requirements_specification.md  testing_document.md  timetracking.md  user_manual.md
exercises/: week1.md
exercises/week2/payment_card/: pyproject.toml
exercises/week2/payment_card/src/: payment_card.py
exercises/week2/payment_card/src/tests/: payment_card_test.py
exercises/week2/unicafe/: .coveragerc
exercises/week2/unicafe/src/: cash_register.py  main.py  payment_card.py
exercises/week2/unicafe/src/tests/: cash_register_test.py  payment_card_test.py
exercises/week3/: task1.md  task2.md
src/: config.py  database_connection.py  initialize.py  initialize_database.py  main.py  old.py
src/entities/: subject.py  user.py
src/repositories/: subject_repository.py  user_repository.py
src/services/: subject_service.py  user_service.py
src/tests/: subject_repository_test.py  subject_service_test.py  user_repository_test.py  user_service_test.py
src/ui/: view_manager.py
src/ui/views/: add_subject_view.py  create_user_view.py  first_view.py  login_view.py  subject_info_view.py  time_spent_view.py  ui_helpers.py  user_subjects_view.py
