[tool.poetry]
name = "software-project"
version = "0.1.0"
description = ""
authors = ["Kirke Ruusalu <kirke.ruusalu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
invoke = "^2.2.0"
python-dotenv = "^1.0.1"
coverage = "^7.6.7"
matplotlib = "^3.10.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pylint = "^3.3.1"
autopep8 = "^2.3.1"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
